fnished customer module
adding swagger and authorization for routes
