# app/Modules/Customers/config/route.php
@@ -1,0 +1,7 @@
+<?php
+
+return [
+    'prefix' => [
+        'customers' => 'customers'
+    ]
+];
